deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: production
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.33
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: ymirblog
  namespace: production
  labels:
    app: ymirblog
spec:
  selector:
    app: ymirblog
  ports:
  - port: 80
    name: http
    targetPort: 8007
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ymirblog
  namespace: production
spec:
  selector:
    matchLabels:
      app: ymirblog
  strategy:
    type: RollingUpdate
  template: #Template for container
    metadata:
      labels:
        app: ymirblog
    spec:
      containers:
      - name: ymirblog
        image:  asia.gcr.io/$PROJECT_ID/production/ymirblog:$SHORT_SHA
        imagePullPolicy: Always
        ports:
        - containerPort: 8007
          name: ymirblog
        resources:
          requests:
            cpu: 50m
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ymirblog
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: playground
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: ymirblog
spec:
  rules:
    - host: ymirblog.adityaeka.my.id
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: ymirblog
              port: 
                number: 80
